# advent-of-code

./: README.md
2015/: AOC2015.cabal
2015/app/: Main.hs
2015/bench/: Bench.hs
2015/src/: Common.hs  Day1.hs  Day2.hs  Day3.hs  Day5.hs  Day6.hs
2019/: .gitignore
2019/day1/: day1.agda
2019/day10/: Day10.cabal
2019/day10/app/: Main.hs
2019/day11/: Day11.cabal
2019/day11/app/: Day11.hs  IntCode.hs
2019/day12/: Day12.cabal
2019/day12/app/: Main.hs  Points.hs
2019/day2/: Day2.cabal
2019/day2/app/: Main.hs
2019/day3/: Day3.cabal
2019/day3/app/: Main.hs
2019/day4/: Day4.cabal
2019/day4/app/: Day4.hs  Main.hs
2019/day5/: Day5.cabal
2019/day5/app/: Day5.hs
2019/day6/: Day6.cabal
2019/day6/app/: Main.hs
2019/day7/: Day7.cabal
2019/day7/app/: Day7.hs
2019/day8/: Day8.cabal
2019/day8/app/: Main.hs
2019/day9/: Day9.cabal
2019/day9/app/: Day9.hs
2020/: AOC2020.cabal
2020/app/: Main.hs
2020/bench/: Bench.hs
2020/src/: Common.hs  Day1.hs  Day10.hs  Day11.hs  Day11m.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs
2020/visualizations/day7/: day7_input.dot  test.dot  transpose_test.dot
