cabal-version:      3.0
category:           Languages
build-type:         Simple
name:               Day3
synopsis:           Advent of Code 2015
version:            0.1.0


executable aoc
  default-language: Haskell2010

  main-is:
    Main.hs

  ghc-options:
    -threaded
    -rtsopts
    -O2
    -with-rtsopts=-T
    -Wall
    -Wincomplete-patterns    

  hs-source-dirs:
    app/

  build-depends:
      base
    , Days
    , megaparsec

Library Days

  ghc-options:
    -threaded
    -rtsopts
    -O2
    -Wall
    -Wincomplete-patterns

  hs-source-dirs:
    src/

  build-depends:
      base
    , bytestring
    , containers
    , lens
    , mtl
    , text
    , vector
    , primitive

  exposed-modules:
      Common
      Day1

  default-language:
    Haskell2010


benchmark bench

  default-language:
    Haskell2010

  main-is:
    Bench.hs

  type:
    exitcode-stdio-1.0  
    
  ghc-options:
    -threaded
    -rtsopts
    -O2
    -Wall
    -Wincomplete-patterns

  hs-source-dirs:
    bench
  
  build-depends:
    , base
    , criterion
    , Days
    , bytestring
    , primitive
    , deepseq
  
   
    

  other-modules: