cabal-version:      2.4
category:           Languages
build-type:         Simple
name:               Day3
synopsis:           Advent of Code 2019 Day 3
version:            0.1.0


executable day3
  default-language: Haskell2010

  main-is:
    Main.hs

  ghc-options:
    -threaded -rtsopts -O2 -fobject-code -with-rtsopts=-T -Wall

  hs-source-dirs:
    app/

  other-modules:
    Points

  build-depends:
      base
    , vector-sized
        ^>= 1.4.0.0
    , containers
        ^>= 0.5.11.0
    , megaparsec
        ^>= 7.0.5
    , primitive
        ^>= 0.7.0.0
    , unboxed-ref
        ^>= 0.4.0.0
    , vector
        ^>= 0.12.0.3
    , vector-th-unbox
        ^>= 0.2.1.7
    , text
        ^>=1.2.3
