cabal-version:      2.4
category:           Languages
build-type:         Simple
name:               Day3
synopsis:           Advent of Code 2019 Day 3
version:            0.1.0


executable day3
  default-language: Haskell2010

  main-is:
    Main.hs

  ghc-options:
    -threaded -rtsopts -O2 -fobject-code -with-rtsopts=-T -Wall

  hs-source-dirs:
    app/

  build-depends:
      base
    , extra
        ^>= 1.6.18
    , containers
        ^>= 0.5.11.0
    , megaparsec
        ^>= 7.0.5
    , text
        ^>=1.2.3
    , vector 
        ^>= 0.12.0.3
