cabal-version:      2.4
category:           Languages
build-type:         Simple
name:               Day6
synopsis:           Advent of Code 2019 Day 6
version:            0.1.0


executable day6
  default-language: Haskell2010

  main-is:
    Main.hs

  ghc-options:
    -threaded -rtsopts -O2 -fobject-code -with-rtsopts=-T -Wall

  hs-source-dirs:
    app/

  build-depends:
      base
    , bytestring
        ^>= 0.10.8.2
    , containers
        ^>= 0.5.11.0
