cabal-version:      2.4
category:           Languages
build-type:         Simple
name:               Day8
synopsis:           Advent of Code 2019 Day 8
version:            0.1.0


executable day8
  default-language: Haskell2010

  main-is:
    Main.hs

  ghc-options:
    -threaded -rtsopts -O2 -fobject-code -with-rtsopts=-T -Wall

  hs-source-dirs:
    app/

  build-depends:
      base
    , extra
        ^>= 1.6.18
    , text
        ^>=1.2.3
